fixed position of scrollbars

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -193,8 +193,8 @@ $placeholder-color: #8e8e8e;
 }
 
 .carousel-item {
-  height: 600px;
-  width: 100%;
+  height: 450px;
+  width: 50%;
   object-fit: contain;
   position: relative;
   
@@ -208,8 +208,9 @@ $placeholder-color: #8e8e8e;
   }
 
   img {
-    width: 100%;
+    // width: 100%;
     height: 100%;
+    margin: auto;
   }
 }
 
